--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # Configuration de la base de données MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/easyshopdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/easyshopdatabase?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
 # Configuration du dialecte Hibernate pour MySQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 
 # Si vous avez déjà une base de données existante, vous pouvez désactiver la création automatique des tables.
 spring.jpa.hibernate.ddl-auto=update
