--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-# Configuration de la base de données MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/easyshopdatabase?useSSL=false&serverTimezone=UTC
+# Configuration de la base de donnï¿½es MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/db_easyshop?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -7,5 +7,5 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
-# Si vous avez déjà une base de données existante, vous pouvez désactiver la création automatique des tables.
+# Si vous avez dï¿½jï¿½ une base de donnï¿½es existante, vous pouvez dï¿½sactiver la crï¿½ation automatique des tables.
 spring.jpa.hibernate.ddl-auto=update
